# result-pattern

./: .gitignore  404.html  GEMINI.md  LICENSE  README.md  RESEARCH.md  index.html  justfile  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt
.github/workflows/: CI.yml  docs.yml  publish.yml
api/adapters/: index.html
api/combinators/: index.html
api/future/: index.html
api/outcome/: index.html
api/result/: index.html
docs/api/: adapters.md  combinators.md  future.md  outcome.md  result.md
search/: search_index.json
src/: result.py
src/result/: __init__.py  adapters.py  combinators.py  future.py  outcome.py  result.py
tests/: test_result.py  test_result_api.py  test_result_api_inference.py  test_result_internal.py
tests/outcome/: test_outcome_api.py  test_outcome_api_inference.py  test_outcome_internal.py
tests/result/: test_adapters_extended.py  test_assert_ok.py  test_catch_adapters.py  test_concurrency.py  test_new_features.py  test_result_api.py  test_result_api_inference.py  test_result_internal.py  test_retry.py  test_stream.py  test_type_precision.py
