[project]
name = 'result_pattern'
version = '0.1.0'
description = ''
readme = 'README.md'
requires-python = '>=3.14'
license = 'MIT'
dependencies = []

[dependency-groups]
dev = [
    'ruff',
    'radon',
    'vulture',
    "pytest>=9.0.2",
    "hypothesis>=6.151.9",
    "pytest-asyncio>=1.3.0",
    "ty>=0.0.21",
    "basedpyright>=1.38.2",
    "mypy>=1.19.1",
    "pyrefly>=0.55.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true
preview = true

[tool.ruff.lint]
preview = true
select = [
    'RUF',
    'D',
    'F',
    'W',
    'N',
    'I',
    'E',
    'A',
    'B',
    'Q',
    'PL',
    'C90',
    'UP',
    'RET',
    'SIM',
    'NPY',
    'PD',
    'ARG',
    'TID',
    'PTH',
    'ISC',
    'PIE',
    'YTT',
    'ASYNC',
    'C4',
    'T10',
    'COM',
    'RSE',
    'PGH',
    'PLR',
    'PLC',
    'PGH',
    'FURB',
    'PLW',
    'TRY',
    'PERF',
    'EXE',
    'DTZ',
    'INT',
    'ISC',
    'ICN',
    'LOG',
    'FLY',
    'EM',
    'SLF',
    'SLOT',
    'FBT',
    'BLE',
    'ANN',
    'TC',
]
ignore = [
    'PLR0913',
    'PLR0911',
    'PLR0914',
    'PLR6301',
    'E501',
    'G004',
    'RUF100',
    'PGH003',
    'PLR0911',
    'PLR0912',
    'COM812',
    'ISC001',
    'TRY003',
    'TRY300',
    'EXE001',
    'D100',
    'D101',
    'D102',
    'D103',
    'D104',
    'D105',
    'D106',
    'D107',
]

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.format]
quote-style = 'double'
docstring-code-format = true
docstring-code-line-length = 'dynamic'
indent-style = 'space'

[tool.mypy]
strict = true
python_version = '3.14'
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true
local_partial_types = true
strict_equality = true
follow_imports = 'silent'

[tool.pyright]
typeCheckingMode = 'strict'
pythonVersion = '3.14'

[tool.radon]
cc = [
    '-a',
    '-nc',
    '-s',
]
mi = ['-s']
