[build-system]
requires = ["hatchling>=1.6"]
build-backend = "hatchling.build"

[project]
name = "result-pattern"
version = "0.2.1"
description = "Errors as Values for Modern Python (result type)"
readme = "README.md"
readme-content-type = "text/markdown"
keywords = ["result", "monad", "functional", "error-handling", "type-safe"]
license = { text = "LICENSE" }
authors = [{ name = "ZuidVolt" }]
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/ZuidVolt/result-pattern"
Documentation = "https://zuidvolt.github.io/result-pattern/"
Repository = "https://github.com/ZuidVolt/result-pattern"

[tool.hatch.build.targets.wheel]
packages = ["src/result"]


[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "LICENSE",
    "src/result/**",
    "src/result/py.typed",
]

# ----------------------
# Dev & tooling settings
# ----------------------

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "hypothesis",
    "mypy",
    "basedpyright",
    "ty",
    "radon",
    "vulture",
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=1.0.3",
]

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true
preview = true
extend-exclude = [".venv"]

[tool.ruff.lint]
preview = true
select = [
    'RUF',
    'D',
    'F',
    'W',
    'N',
    'I',
    'E',
    'A',
    'B',
    'Q',
    'PL',
    'C90',
    'UP',
    'RET',
    'SIM',
    'NPY',
    'PD',
    'ARG',
    'TID',
    'PTH',
    'ISC',
    'PIE',
    'YTT',
    'ASYNC',
    'C4',
    'T10',
    'COM',
    'RSE',
    'PGH',
    'PLR',
    'PLC',
    'PGH',
    'FURB',
    'PLW',
    'TRY',
    'PERF',
    'EXE',
    'DTZ',
    'INT',
    'ISC',
    'ICN',
    'LOG',
    'FLY',
    'EM',
    'SLF',
    'SLOT',
    'FBT',
    'BLE',
    'ANN',
    'TC',
]
ignore = [
    "PLR0913", "PLR0911", "PLR0914", "PLR6301", # Complexity and self-use overrides
    "E501", "G004", "RUF100", "PGH003", "PLR0912", # Style overrides
    "COM812", "ISC001", # Formatter conflicts
    "TRY003", "TRY300", "EXE001", "EM101", # Exception handling
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", # Docstring coverage
    "D203", "D212", "D213", # Docstring style conflicts
    "ANN401", # Allow Any
    "CPY001", # Don't require copyright notices
    "S101", # Allow asserts
    "DOC201", "DOC402", "DOC501", "DOC502", # Don't enforce strict docstring sections
    "PT012", # Allow multiple statements in pytest.raises
    "D401", # Allow descriptive docstrings instead of strictly imperative
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
strict = true
python_version = "3.14"
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true
mypy_path = "src"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src/", "tests/"]
extraPaths = ["src"]
reportAny = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.radon]
cc = ["-a", "-nc", "-s"]
mi = ["-s"]
